--- a/force-app/main/default/lwc/calculateTax/calculateTax.html
+++ b/force-app/main/default/lwc/calculateTax/calculateTax.html
@@ -1,9 +1,9 @@
 <template>
     <lightning-card title="Calculate Tax" icon-name="action:money">
-        <div class="slds-m-around_medium">
+        <div class="slds-var-m-around_medium">
             <lightning-combobox label="Select Country" value={selectedCountry} options={countryOptions} onchange={handleCountryChange}></lightning-combobox>
         </div>
-        <div class="slds-m-around_medium">
+        <div class="slds-var-m-around_medium">
             <p>Calculated Tax: {calculatedTax}</p>
         </div>
     </lightning-card>
