--- a/force-app/main/default/lwc/calculateTax/calculateTax.html
+++ b/force-app/main/default/lwc/calculateTax/calculateTax.html
@@ -1,10 +1,12 @@
 <template>
-    <lightning-card title="Calculate Tax" icon-name="action:money">
-        <div class="slds-var-m-around_medium">
-            <lightning-combobox label="Select Country" value={selectedCountry} options={countryOptions} onchange={handleCountryChange}></lightning-combobox>
-        </div>
-        <div class="slds-var-m-around_medium">
-            <p>Calculated Tax: {calculatedTax}</p>
-        </div>
-    </lightning-card>
+    <lightning-record-view-form record-id={recordId} object-api-name="Invoice__c">
+        <lightning-card title="Calculate Tax" icon-name="action:money">
+            <div class="slds-var-m-around_medium"><lightning-record-view-form></lightning-record-view-form>
+                <lightning-combobox label="Select Country" value={selectedCountry} options={options} onchange={handleCountryChange}></lightning-combobox>
+            </div>
+            <div class="slds-var-m-around_medium">
+                <p>Calculated Tax: {calculatedTax} zł</p>
+            </div>
+        </lightning-card>
+    </lightning-record-view-form>
 </template>
